Bug 346185 r=uriber sr=bryner fixing one of two misspelled words in a line makes spellcheck underline disappear on both